syntax = "proto3";

package oj.judger;

import "google/protobuf/empty.proto";

message JudgeRequest {
  string lang_uid = 1;
  bytes code = 2;
  // memory limit in byte
  int64 memory = 3;
  // time limit in nanosecond
  uint64 time = 4;
  JudgeMatchRule rule = 5;
  // len must > 0
  repeated TestIO tests = 6;
}

message TestIO {
  bytes input = 1;
  bytes output = 2;
}

message JudgeResponse {
  oneof task {
    // number of test case running(or finished)
    int32 case = 1;
    JudgeResult result = 2;
  }
}

message JudgeResult {
  // assertion code
  JudgeResultState status = 1;
  // the time in nanosecond
  optional uint64 max_time = 2;
  // the peak memory usage
  optional uint64 max_mem = 3;
}

enum JudgeResultState {
  AC = 0;
  NA = 1;
  WA = 2;
  CE = 3;
  RE = 4;
  RF = 5;
  TLE = 6;
  MLE = 7;
  OLE = 8;
}

// How judge assert input
enum JudgeMatchRule {
  // exactly same
  ExactSame = 0;
  // assert segment between space or newline, empty segments are also compare
  IgnoreSpace = 1;
  // assert segment between space or newline, empty segments are ignored
  SkipSNL = 2;
}

message Langs { repeated LangInfo list = 1; }

// assertion code
message LangInfo {
  string lang_uid = 1;
  string lang_name = 2;
  // compiler info or runtime info
  string info = 3;
  string lang_ext = 4;
}

message JudgeInfo {
  // memory limit of judger in byte
  int64 memory = 1;
  // max possible deviation in nanosecond
  int64 accuracy = 2;
  Langs langs = 3;
  float cpu_factor = 4;
}

service Judger {
  // Send Code for judge
  rpc Judge(JudgeRequest) returns (stream JudgeResponse);
  // Get judger info, useful for getting supported language and load balancing
  rpc JudgerInfo(google.protobuf.Empty) returns (JudgeInfo);
}
